Cache KV: request path to file ID mapping

--- a/sample.env
+++ b/sample.env
@@ -1,4 +1,10 @@
-# Cant be used directly , need to set in wrangler vars/secrets
+# THIS FILE IS NOT USED DIRECTLY
+
+# Wrangler Config env (Substitute in wrangler.toml)
+DRIVEFILEIDKV_ID = 
+DRIVEFILEIDKV_PREVIEW_ID = 
+
+# Need to set in wrangler.toml [vars] or [secrets]
 ROOTFOLDERID = 
 TEAMDRIVEID = 
 GAPIKEY = 
