--- a/example.wrangler.toml
+++ b/example.wrangler.toml
@@ -13,10 +13,8 @@ compatibility_date = "2021-11-28"
 
 # KV Store
 # Replace the following id , preview_id with your own KV Store
-# Below placeholder values wont be replaced by wranger and need to set manually
-kv_namespaces = [
-    { binding = "driveFileIDKV", id = "${{DRIVEFILEIDKV_ID}}", preview_id = "${{DRIVEFILEIDKV_PREVIEW_ID}}" },
-]
+# Below placeholder values wont be replaced by wranger and need to set manually 
+kv_namespaces = [{ binding = "driveFileIDKV", id = "", preview_id = "" }]
 
 [build]
 command = "npm run build"
@@ -24,7 +22,7 @@ command = "npm run build"
 [build.upload]
 format = "service-worker"
 
-# Secrets , Need to be directly set in CF dashboard
+# Secrets , Need to be directly set in CF dashboard or with wrangler secret put <NAME>
 # [secrets]
 # ROOTFOLDERID
 # TEAMDRIVEID
