--- a/example.wrangler.toml
+++ b/example.wrangler.toml
@@ -30,7 +30,7 @@ format = "service-worker"
 # GAPIREFERER
 
 # Environments
-[env.workerdev]
+# Default environment
 workers_dev = true
 # KV Store
 # Replace the following id , preview_id with your own KV Store
