--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "webpack-cli": "^4.9.1"
   },
   "devDependencies": {
-    "googleapis": "^91.0.0"
+    "googleapis": "^91.0.0",
+    "wrangler": "^2.0.12"
   }
 }
